--- a/jpa-01/pom.xml
+++ b/jpa-01/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.11</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.30</version> <!-- 2025년 현재 기준 최신 버전 -->
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
 
     <build>
